--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "website",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Just a website",
-  "main": "index.js",
   "scripts": {
-    "postinstall": "cd public && npm install && cd -",
-    "start": "node index.js"
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -18,15 +18,22 @@
     "MatthieuLemoine"
   ],
   "author": "MatthieuLemoine",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/MatthieuLemoine/website/issues"
   },
   "homepage": "https://github.com/MatthieuLemoine/website#readme",
   "dependencies": {
-    "finalhandler": "^0.4.1",
-    "gulp": "^3.9.0",
-    "gulp-livereload": "^3.8.1",
-    "serve-static": "^1.10.2"
+    "next": "^2.0.0-beta",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "styled-components": "^1.4.4"
+  },
+  "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
