--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     }],
     "no-unused-expressions": 0,
     "react/require-default-props": 0,
-    "no-confusing-arrow": 0
+    "no-confusing-arrow": 0,
+    "no-nested-ternary": 0,
   }
 }
