:sparkles: Sevice Worker

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "styled-components": "^1.4.5"
+    "styled-components": "^1.4.5",
+    "sw-precache-webpack-plugin": "^0.9.1"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
