--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "eslint **/*.js",
     "lint:fix": "eslint **/*.js --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MatthieuLemoine/website.git"
-  },
+  "repository": "git+https://github.com/MatthieuLemoine/website.git",
   "keywords": [
     "website",
     "matthieu",
@@ -26,12 +23,12 @@
   },
   "homepage": "https://github.com/MatthieuLemoine/website#readme",
   "dependencies": {
-    "next": "^2.1.1",
+    "next": "^2.3.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "styled-components": "^1.4.5",
-    "sw-precache-webpack-plugin": "^0.9.1"
+    "styled-components": "^1.4.6",
+    "sw-precache-webpack-plugin": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
