--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,26 @@
 {
- "extends": "airbnb",
- "env" : {
-    "browser" : true
+  "parser": "babel-eslint",
+  "extends": ["airbnb"],
+  "env": {
+    "jest": true,
+    "browser": true
   },
- "rules"  : {
-    "react/jsx-filename-extension" : [1, { "extensions": [".js", ".jsx"] }],
-    "import/extensions" : 0,
+  "rules": {
+    "import/no-named-as-default": 0,
+    "import/no-named-as-default-member": 0,
+    "import/prefer-default-export": 0,
+    "react/jsx-filename-extension": 0,
     "react/react-in-jsx-scope": 0,
-    "react/no-danger": 0,
-    "key-spacing" : [1,{
-      "beforeColon" : true,
-      "afterColon"  : true,
-      "mode"        : "minimum"
-    }],
-    "no-unused-expressions": 0,
-    "react/require-default-props": 0,
-    "no-confusing-arrow": 0,
+    "no-underscore-dangle": 0,
+    "react/no-array-index-key": 0,
     "no-nested-ternary": 0,
-    "arrow-parens": 0,
+    "import/extensions": [
+      2,
+      "always",
+      {
+        "js": "never",
+        "json": "never"
+      }
+    ]
   }
 }
